@@ -1,3 +1,7 @@
+Sat Mar 03 09:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
+
+	* gtkgame.c: Remove old ClearText function
+
 Mon Feb 27 10:56:45 2006 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
 
 	* play.c: Fix 'too good' tutor bug
